# template-cmake-lib

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  package.json  packages.ps1  uv.toml
cmake/: help.cmake  lib-config.cmake  libConfig.cmake  true.cmake
config/: CMakeLists.txt
examples/: CMakeLists.txt  example.cxx
examples/console/: CMakeLists.txt
examples/console/src/: main.cxx
include/lib/: lib.hpp
include/log/: log.hpp
include/utils/: log.hpp
lib/: CMakeLists.txt  lib.cxx
lib/include/lib/: lib.hxx
lib_usage/: CMakeLists.txt
src/: example.cpp  lib.cpp  log.cpp
